GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/Additional_Compensation_Rules__c.object-meta.xml
<CustomObject>
    <description>This object hold the rules for giving additional compensation on top of the basic rates (For ticket delay compensation only)</description>
    <label>Additional Compensation Rule</label>
    <nameField>
        <displayFormat>ACR-{0000}</displayFormat>
        <label>Rule Numer</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Additional Compensation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>