GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Additional_Compensation_Rules_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Compensation_Rules_Name__c</fullName>
    <label>Additional Compensation Rules Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>