GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Additional_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Additional_Percentage__c</fullName>
    <description>Additional Percentage</description>
    <inlineHelpText>Enter the additional comp %. This will be added to the Basic % defined in the compensation rule custom settings</inlineHelpText>
    <label>Additional Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>