GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Allow_Loyalty_Points__c.field-meta.xml
<CustomField>
    <fullName>Allow_Loyalty_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Can the compensation compensation be claimed as points</description>
    <inlineHelpText>Tick this if the compensation can be claimed in loyalty points. If this is unticked, loyalty points will not be calculated</inlineHelpText>
    <label>Allow Loyalty Points</label>
    <type>Checkbox</type>
</CustomField>