GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Booking_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_From__c</fullName>
    <description>The rule will be applicable only for the booking made after this date</description>
    <inlineHelpText>The rule will be applicable only for the booking made after this date</inlineHelpText>
    <label>Booking Date From</label>
    <type>Date</type>
</CustomField>