GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Booking_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_To__c</fullName>
    <description>The rule will be applicable only for the booking made before this date (inclusive)</description>
    <inlineHelpText>The rule will be applicable only for the booking made before this date (inclusive)</inlineHelpText>
    <label>Booking Date To</label>
    <type>Date</type>
</CustomField>