GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Date_From__c.field-meta.xml
<CustomField>
    <fullName>Date_From__c</fullName>
    <description>Travel date from</description>
    <inlineHelpText>Enter the travel date from which this rule is applicable</inlineHelpText>
    <label>Date From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>