GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Date_To__c.field-meta.xml
<CustomField>
    <fullName>Date_To__c</fullName>
    <description>Travel date to</description>
    <inlineHelpText>Enter the travel date up to and including the date to which this rule is applicable</inlineHelpText>
    <label>Date To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>