GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Fixed_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Expiry_Date__c</fullName>
    <description>Voucher expiry date</description>
    <inlineHelpText>Voucher expiry date</inlineHelpText>
    <label>Fixed Expiry Date</label>
    <type>Date</type>
</CustomField>