GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Rule_Justification__c.field-meta.xml
<CustomField>
    <fullName>Rule_Justification__c</fullName>
    <inlineHelpText>Enter a description for this rule. For example: &quot;Additional compensation of 5% is being applied due to disruption.&quot;</inlineHelpText>
    <label>Rule Justification</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>