GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Station_From__c.field-meta.xml
<CustomField>
    <fullName>Station_From__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Station From</description>
    <inlineHelpText>Enter the origin of journey from which this rule is applicable</inlineHelpText>
    <label>Station From</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Additional Compensation Rules</relationshipLabel>
    <relationshipName>Additional_Compensation_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>