GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Station_To__c.field-meta.xml
<CustomField>
    <fullName>Station_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Destination Station</description>
    <inlineHelpText>Enter thedestination station which this rule is applicable</inlineHelpText>
    <label>Station To</label>
    <referenceTo>Stations__c</referenceTo>
    <relationshipLabel>Additional Compensation Rules (Station To)</relationshipLabel>
    <relationshipName>Additional_Compensation_Rules1</relationshipName>
    <type>Lookup</type>
</CustomField>