GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Time_From__c.field-meta.xml
<CustomField>
    <fullName>Time_From__c</fullName>
    <description>Time from</description>
    <inlineHelpText>Enter the time from which this rule is applicable</inlineHelpText>
    <label>Time From</label>
    <type>Time</type>
</CustomField>