GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Time_To__c.field-meta.xml
<CustomField>
    <fullName>Time_To__c</fullName>
    <description>Time To</description>
    <inlineHelpText>Enter thetime to which this rule is applicable</inlineHelpText>
    <label>Time To</label>
    <type>Time</type>
</CustomField>