GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Trains__c.field-meta.xml
<CustomField>
    <fullName>Trains__c</fullName>
    <description>List of trains</description>
    <inlineHelpText>Enter the train numbers (as comma seprated list) to which this rule is applicable. If left blank the applicable to All trains</inlineHelpText>
    <label>Trains</label>
    <length>255</length>
    <type>Text</type>
</CustomField>