GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/fields/Voucher_Life_in_months__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Life_in_months__c</fullName>
    <description>Number of months this voucher valid for</description>
    <inlineHelpText>Number of months this voucher valid for</inlineHelpText>
    <label>Voucher Life in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>