GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/recordTypes/PostTravelRule.recordType-meta.xml
<RecordType>
    <fullName>PostTravelRule</fullName>
    <active>true</active>
    <description>These rules will be applied to tickets after their travel</description>
    <label>Post-Travel Rule</label>
</RecordType>