GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/recordTypes/PreTravelRule.recordType-meta.xml
<RecordType>
    <fullName>PreTravelRule</fullName>
    <active>true</active>
    <description>These rules will be applied to tickets before their travel</description>
    <label>Pre-Travel Rule</label>
</RecordType>