GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/validationRules/Add_Comp_Rule_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Comp_Rule_Date_validation</fullName>
    <active>false</active>
    <errorConditionFormula>(Date_From__c &gt;  Date_To__c)</errorConditionFormula>
    <errorDisplayField>Date_From__c</errorDisplayField>
    <errorMessage>Date from should be less than date to</errorMessage>
</ValidationRule>