GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/validationRules/Add_Comp_Rule_Time_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Comp_Rule_Time_validation</fullName>
    <active>false</active>
    <errorConditionFormula>(AND(AND(NOT(ISNULL(Time_From__c)),NOT(ISNULL(Time_To__c))),Time_From__c&gt;Time_To__c))</errorConditionFormula>
    <errorDisplayField>Time_From__c</errorDisplayField>
    <errorMessage>Time from should be less than Time to</errorMessage>
</ValidationRule>