GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/validationRules/Add_Comp_Rule_TrainNumber_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Comp_Rule_TrainNumber_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( LEN(Trains__c)&gt;0, !REGEX(  Trains__c  , &#39;(09[0-1]{1}([0-9]{2}),?)+&#39;))</errorConditionFormula>
    <errorDisplayField>Trains__c</errorDisplayField>
    <errorMessage>Invalid Train number format. Train number should be of length 5, starting with 09, then a 0 or a 1 followed by 2 more digits</errorMessage>
</ValidationRule>