GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/validationRules/Historic_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Historic_Date_validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
     OR ( ISCHANGED( Additional_Percentage__c ), 
          ISCHANGED(  Station_From__c ), 
          ISCHANGED( Station_To__c ), 
          ISCHANGED(  Time_From__c ), 
          ISCHANGED(  Time_To__c ), 
          ISCHANGED(  Trains__c )
     ),  
     OR ( PRIORVALUE( Date_From__c ) &lt;  TODAY(),
          PRIORVALUE( Date_To__c ) &lt;  TODAY(),
          Date_From__c   &lt;  TODAY(),            
          Date_To__c   &lt;  TODAY() 
     )
)</errorConditionFormula>
    <errorDisplayField>Additional_Percentage__c</errorDisplayField>
    <errorMessage>You cannot change the details  of a past date</errorMessage>
</ValidationRule>