GearsetPOC/force-app/main/default/objects/Additional_Compensation_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Additional_Compensation_Rules_Name__c</columns>
    <columns>Rule_Justification__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Status__c</columns>
    <columns>Date_From__c</columns>
    <columns>Date_To__c</columns>
    <columns>Trains__c</columns>
    <columns>Fixed_Expiry_Date__c</columns>
    <columns>Station_From__c</columns>
    <columns>Station_To__c</columns>
    <columns>Time_From__c</columns>
    <columns>Time_To__c</columns>
    <columns>Additional_Percentage__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>